# bazel-minimal-poetry

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json
examples/numpy/: BUILD  app.py
tools/poetry/: BUILD  pyproject.toml  transitions.bzl
